// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@input: matches snapshot * appearance * icon 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F8FA",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "minHeight": 48,
        "paddingHorizontal": 8,
        "paddingVertical": 14,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      appearance="default"
      dispatch={[Function]}
      editable={true}
      onEndEditing={[Function]}
      onFocus={[Function]}
      status="primary"
      style={
        Object {
          "color": "#8992A3",
          "flex": 1,
          "fontSize": 15,
          "lineHeight": 20,
          "marginHorizontal": 8,
        }
      }
      theme={
        Object {
          "blue-dark": "#2541CC",
          "blue-pitch-dark": "#0D1C2E",
          "blue-primary": "#3366FF",
          "color-basic-100": "#F7F8FA",
          "color-basic-200": "#EDF0F5",
          "color-basic-300": "#DDE1EB",
          "color-basic-400": "#C8CEDB",
          "color-basic-500": "#A6AEBD",
          "color-basic-600": "#8992A3",
          "color-basic-700": "#6A7385",
          "color-basic-800": "#4B5466",
          "color-basic-900": "#2C3547",
          "color-black": "#0D1C2E",
          "color-danger-100": "#FFF2F2",
          "color-danger-200": "#FFD6D9",
          "color-danger-300": "#FFA8B4",
          "color-danger-400": "#FF708D",
          "color-danger-500": "#FF3D71",
          "color-danger-600": "#DB2C66",
          "color-danger-700": "#B81D5B",
          "color-danger-800": "#94124E",
          "color-danger-900": "#700940",
          "color-info-100": "#F2F8FF",
          "color-info-200": "#C7E2FF",
          "color-info-300": "#94CBFF",
          "color-info-400": "#42AAFF",
          "color-info-500": "#0095FF",
          "color-info-600": "#006FD6",
          "color-info-700": "#0057C2",
          "color-info-800": "#0041A8",
          "color-info-900": "#002885",
          "color-primary-100": "#F2F6FF",
          "color-primary-200": "#D9E4FF",
          "color-primary-300": "#A6C1FF",
          "color-primary-400": "#598BFF",
          "color-primary-500": "#3366FF",
          "color-primary-600": "#284DE0",
          "color-primary-700": "#2541CC",
          "color-primary-800": "#192F9E",
          "color-primary-900": "#14236E",
          "color-secondary-100": "#F7F2FF",
          "color-secondary-200": "#E0D1FF",
          "color-secondary-300": "#C5A8FF",
          "color-secondary-400": "#A375FF",
          "color-secondary-500": "#884DFF",
          "color-secondary-600": "#6A39DB",
          "color-secondary-700": "#4F28B8",
          "color-secondary-800": "#371B94",
          "color-secondary-900": "#26117A",
          "color-success-100": "#EDFFF3",
          "color-success-200": "#B3FFD6",
          "color-success-300": "#8CFAC7",
          "color-success-400": "#51F0B0",
          "color-success-500": "#00E096",
          "color-success-600": "#00B383",
          "color-success-700": "#008F72",
          "color-success-800": "#007566",
          "color-success-900": "#00524C",
          "color-tertiary-100": "#FFDED6",
          "color-tertiary-200": "#FFDED6",
          "color-tertiary-300": "#FFDED6",
          "color-tertiary-400": "#FFDED6",
          "color-tertiary-500": "#FFDED6",
          "color-tertiary-600": "#FFDED6",
          "color-tertiary-700": "#FFDED6",
          "color-tertiary-800": "#FFDED6",
          "color-tertiary-900": "#FFDED6",
          "color-warning-100": "#FFFDF2",
          "color-warning-200": "#FFF1C2",
          "color-warning-300": "#FFE59E",
          "color-warning-400": "#FFC94D",
          "color-warning-500": "#FFAA00",
          "color-warning-600": "#DB8B00",
          "color-warning-700": "#B86E00",
          "color-warning-800": "#945400",
          "color-warning-900": "#703C00",
          "color-white": "#FFFFFF",
          "font-primary-color": "#0D1C2E",
          "font-primary-disabled-color": "#C8CEDB",
          "font-primary-family": "",
          "font-primary-regular-text-line-height": 16,
          "font-primary-regular-text-size": 14,
          "font-primary-regular-text-weight": "600",
          "gray-100": "#f7f8fa",
          "gray-200": "#edf0f5",
          "gray-300": "#c8cedb",
          "gray-400": "#a6aebd",
          "gray-dark": "#8992A3",
          "gray-highlight": "#EDF0F5",
          "gray-light": "#DDE1EB",
          "gray-primary": "#A6AEBD",
          "opacity-transparent": "transparent",
          "outline-color": "#DDE1EB",
          "outline-disabled-color": "transparent",
          "outline-disabled-width": 0,
          "outline-width": 11,
          "pink-primary": "#FF3D71",
          "text-primary": "#000000",
          "text-primary-inverse": "#ffffff",
        }
      }
      underlineColorAndroid="transparent"
    />
    <Component
      source={
        Object {
          "uri": "https://akveo.github.io/eva-icons/fill/png/128/star.png",
        }
      }
      style={
        Object {
          "height": 24,
          "marginHorizontal": 8,
          "tintColor": "#A6AEBD",
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  />
</View>
`;

exports[`@input: matches snapshot * appearance * label + caption 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <ForwardRef(WrappingElement)
    style={
      Object {
        "color": "#8992A3",
        "fontSize": 12,
        "fontWeight": "700",
        "lineHeight": 16,
        "marginBottom": 4,
      }
    }
  >
    Label
  </ForwardRef(WrappingElement)>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F8FA",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "minHeight": 48,
        "paddingHorizontal": 8,
        "paddingVertical": 14,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      appearance="default"
      dispatch={[Function]}
      editable={true}
      onEndEditing={[Function]}
      onFocus={[Function]}
      status="primary"
      style={
        Object {
          "color": "#8992A3",
          "flex": 1,
          "fontSize": 15,
          "lineHeight": 20,
          "marginHorizontal": 8,
        }
      }
      theme={
        Object {
          "blue-dark": "#2541CC",
          "blue-pitch-dark": "#0D1C2E",
          "blue-primary": "#3366FF",
          "color-basic-100": "#F7F8FA",
          "color-basic-200": "#EDF0F5",
          "color-basic-300": "#DDE1EB",
          "color-basic-400": "#C8CEDB",
          "color-basic-500": "#A6AEBD",
          "color-basic-600": "#8992A3",
          "color-basic-700": "#6A7385",
          "color-basic-800": "#4B5466",
          "color-basic-900": "#2C3547",
          "color-black": "#0D1C2E",
          "color-danger-100": "#FFF2F2",
          "color-danger-200": "#FFD6D9",
          "color-danger-300": "#FFA8B4",
          "color-danger-400": "#FF708D",
          "color-danger-500": "#FF3D71",
          "color-danger-600": "#DB2C66",
          "color-danger-700": "#B81D5B",
          "color-danger-800": "#94124E",
          "color-danger-900": "#700940",
          "color-info-100": "#F2F8FF",
          "color-info-200": "#C7E2FF",
          "color-info-300": "#94CBFF",
          "color-info-400": "#42AAFF",
          "color-info-500": "#0095FF",
          "color-info-600": "#006FD6",
          "color-info-700": "#0057C2",
          "color-info-800": "#0041A8",
          "color-info-900": "#002885",
          "color-primary-100": "#F2F6FF",
          "color-primary-200": "#D9E4FF",
          "color-primary-300": "#A6C1FF",
          "color-primary-400": "#598BFF",
          "color-primary-500": "#3366FF",
          "color-primary-600": "#284DE0",
          "color-primary-700": "#2541CC",
          "color-primary-800": "#192F9E",
          "color-primary-900": "#14236E",
          "color-secondary-100": "#F7F2FF",
          "color-secondary-200": "#E0D1FF",
          "color-secondary-300": "#C5A8FF",
          "color-secondary-400": "#A375FF",
          "color-secondary-500": "#884DFF",
          "color-secondary-600": "#6A39DB",
          "color-secondary-700": "#4F28B8",
          "color-secondary-800": "#371B94",
          "color-secondary-900": "#26117A",
          "color-success-100": "#EDFFF3",
          "color-success-200": "#B3FFD6",
          "color-success-300": "#8CFAC7",
          "color-success-400": "#51F0B0",
          "color-success-500": "#00E096",
          "color-success-600": "#00B383",
          "color-success-700": "#008F72",
          "color-success-800": "#007566",
          "color-success-900": "#00524C",
          "color-tertiary-100": "#FFDED6",
          "color-tertiary-200": "#FFDED6",
          "color-tertiary-300": "#FFDED6",
          "color-tertiary-400": "#FFDED6",
          "color-tertiary-500": "#FFDED6",
          "color-tertiary-600": "#FFDED6",
          "color-tertiary-700": "#FFDED6",
          "color-tertiary-800": "#FFDED6",
          "color-tertiary-900": "#FFDED6",
          "color-warning-100": "#FFFDF2",
          "color-warning-200": "#FFF1C2",
          "color-warning-300": "#FFE59E",
          "color-warning-400": "#FFC94D",
          "color-warning-500": "#FFAA00",
          "color-warning-600": "#DB8B00",
          "color-warning-700": "#B86E00",
          "color-warning-800": "#945400",
          "color-warning-900": "#703C00",
          "color-white": "#FFFFFF",
          "font-primary-color": "#0D1C2E",
          "font-primary-disabled-color": "#C8CEDB",
          "font-primary-family": "",
          "font-primary-regular-text-line-height": 16,
          "font-primary-regular-text-size": 14,
          "font-primary-regular-text-weight": "600",
          "gray-100": "#f7f8fa",
          "gray-200": "#edf0f5",
          "gray-300": "#c8cedb",
          "gray-400": "#a6aebd",
          "gray-dark": "#8992A3",
          "gray-highlight": "#EDF0F5",
          "gray-light": "#DDE1EB",
          "gray-primary": "#A6AEBD",
          "opacity-transparent": "transparent",
          "outline-color": "#DDE1EB",
          "outline-disabled-color": "transparent",
          "outline-disabled-width": 0,
          "outline-width": 11,
          "pink-primary": "#FF3D71",
          "text-primary": "#000000",
          "text-primary-inverse": "#ffffff",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Component
      source={
        Object {
          "uri": "https://akveo.github.io/eva-icons/fill/png/128/star.png",
        }
      }
      style={
        Object {
          "height": 10,
          "marginRight": 8,
          "tintColor": "#A6AEBD",
          "width": 10,
        }
      }
    />
    <ForwardRef(WrappingElement)
      style={
        Object {
          "color": "#8992A3",
          "fontSize": 11,
          "fontWeight": "normal",
          "lineHeight": 16,
        }
      }
    >
      Caption Text
    </ForwardRef(WrappingElement)>
  </View>
</View>
`;

exports[`@input: matches snapshot * interaction * stateless 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F7F8FA",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "minHeight": 48,
        "paddingHorizontal": 8,
        "paddingVertical": 14,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      appearance="default"
      dispatch={[Function]}
      editable={true}
      onEndEditing={[Function]}
      onFocus={[Function]}
      status="primary"
      style={
        Object {
          "color": "#8992A3",
          "flex": 1,
          "fontSize": 15,
          "lineHeight": 20,
          "marginHorizontal": 8,
        }
      }
      theme={
        Object {
          "blue-dark": "#2541CC",
          "blue-pitch-dark": "#0D1C2E",
          "blue-primary": "#3366FF",
          "color-basic-100": "#F7F8FA",
          "color-basic-200": "#EDF0F5",
          "color-basic-300": "#DDE1EB",
          "color-basic-400": "#C8CEDB",
          "color-basic-500": "#A6AEBD",
          "color-basic-600": "#8992A3",
          "color-basic-700": "#6A7385",
          "color-basic-800": "#4B5466",
          "color-basic-900": "#2C3547",
          "color-black": "#0D1C2E",
          "color-danger-100": "#FFF2F2",
          "color-danger-200": "#FFD6D9",
          "color-danger-300": "#FFA8B4",
          "color-danger-400": "#FF708D",
          "color-danger-500": "#FF3D71",
          "color-danger-600": "#DB2C66",
          "color-danger-700": "#B81D5B",
          "color-danger-800": "#94124E",
          "color-danger-900": "#700940",
          "color-info-100": "#F2F8FF",
          "color-info-200": "#C7E2FF",
          "color-info-300": "#94CBFF",
          "color-info-400": "#42AAFF",
          "color-info-500": "#0095FF",
          "color-info-600": "#006FD6",
          "color-info-700": "#0057C2",
          "color-info-800": "#0041A8",
          "color-info-900": "#002885",
          "color-primary-100": "#F2F6FF",
          "color-primary-200": "#D9E4FF",
          "color-primary-300": "#A6C1FF",
          "color-primary-400": "#598BFF",
          "color-primary-500": "#3366FF",
          "color-primary-600": "#284DE0",
          "color-primary-700": "#2541CC",
          "color-primary-800": "#192F9E",
          "color-primary-900": "#14236E",
          "color-secondary-100": "#F7F2FF",
          "color-secondary-200": "#E0D1FF",
          "color-secondary-300": "#C5A8FF",
          "color-secondary-400": "#A375FF",
          "color-secondary-500": "#884DFF",
          "color-secondary-600": "#6A39DB",
          "color-secondary-700": "#4F28B8",
          "color-secondary-800": "#371B94",
          "color-secondary-900": "#26117A",
          "color-success-100": "#EDFFF3",
          "color-success-200": "#B3FFD6",
          "color-success-300": "#8CFAC7",
          "color-success-400": "#51F0B0",
          "color-success-500": "#00E096",
          "color-success-600": "#00B383",
          "color-success-700": "#008F72",
          "color-success-800": "#007566",
          "color-success-900": "#00524C",
          "color-tertiary-100": "#FFDED6",
          "color-tertiary-200": "#FFDED6",
          "color-tertiary-300": "#FFDED6",
          "color-tertiary-400": "#FFDED6",
          "color-tertiary-500": "#FFDED6",
          "color-tertiary-600": "#FFDED6",
          "color-tertiary-700": "#FFDED6",
          "color-tertiary-800": "#FFDED6",
          "color-tertiary-900": "#FFDED6",
          "color-warning-100": "#FFFDF2",
          "color-warning-200": "#FFF1C2",
          "color-warning-300": "#FFE59E",
          "color-warning-400": "#FFC94D",
          "color-warning-500": "#FFAA00",
          "color-warning-600": "#DB8B00",
          "color-warning-700": "#B86E00",
          "color-warning-800": "#945400",
          "color-warning-900": "#703C00",
          "color-white": "#FFFFFF",
          "font-primary-color": "#0D1C2E",
          "font-primary-disabled-color": "#C8CEDB",
          "font-primary-family": "",
          "font-primary-regular-text-line-height": 16,
          "font-primary-regular-text-size": 14,
          "font-primary-regular-text-weight": "600",
          "gray-100": "#f7f8fa",
          "gray-200": "#edf0f5",
          "gray-300": "#c8cedb",
          "gray-400": "#a6aebd",
          "gray-dark": "#8992A3",
          "gray-highlight": "#EDF0F5",
          "gray-light": "#DDE1EB",
          "gray-primary": "#A6AEBD",
          "opacity-transparent": "transparent",
          "outline-color": "#DDE1EB",
          "outline-disabled-color": "transparent",
          "outline-disabled-width": 0,
          "outline-width": 11,
          "pink-primary": "#FF3D71",
          "text-primary": "#000000",
          "text-primary-inverse": "#ffffff",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  />
</View>
`;
